Update ProtocolLib tab list packets