@@ -4,43 +4,25 @@ import com.comphenix.protocol.PacketType;
 import com.comphenix.protocol.ProtocolLibrary;
 import com.comphenix.protocol.ProtocolManager;
 import com.comphenix.protocol.events.PacketContainer;
-import com.comphenix.protocol.wrappers.EnumWrappers;
+import com.comphenix.protocol.wrappers.EnumWrappers.NativeGameMode;
+import com.comphenix.protocol.wrappers.EnumWrappers.PlayerInfoAction;
 import com.comphenix.protocol.wrappers.PlayerInfoData;
 import com.comphenix.protocol.wrappers.WrappedChatComponent;
 import com.comphenix.protocol.wrappers.WrappedGameProfile;
 import com.comphenix.protocol.wrappers.WrappedSignedProperty;
+import java.util.Collections;
 import java.util.EnumSet;
-import java.util.List;
-import java.util.concurrent.ThreadLocalRandom;
 import org.bukkit.Bukkit;
 import org.bukkit.entity.Player;
 import org.bukkit.plugin.java.JavaPlugin;
 
 public class PacketManager {
-    private static final PacketType INFO_UPDATE_PACKET;
-    private static final PacketType INFO_REMOVE_PACKET;
-
-    static {
-        PacketType updatePacket = null;
-        PacketType removePacket = null;
-        try {
-            java.lang.reflect.Field updateField = PacketType.Play.Server.class.getField("PLAYER_INFO_UPDATE");
-            updatePacket = (PacketType) updateField.get(null);
-
-            java.lang.reflect.Field removeField = PacketType.Play.Server.class.getField("PLAYER_INFO_REMOVE");
-            removePacket = (PacketType) removeField.get(null);
-        } catch (Exception e) {
-            e.printStackTrace();
-        }
-        INFO_UPDATE_PACKET = updatePacket;
-        INFO_REMOVE_PACKET = removePacket;
-    }
-
-    private static final EnumSet<EnumWrappers.PlayerInfoAction> TAB_LIST_ACTIONS = EnumSet.of(
-        EnumWrappers.PlayerInfoAction.ADD_PLAYER,
-        EnumWrappers.PlayerInfoAction.UPDATE_LISTED,
-        EnumWrappers.PlayerInfoAction.UPDATE_LATENCY,
-        EnumWrappers.PlayerInfoAction.UPDATE_DISPLAY_NAME
+    private static final EnumSet<PlayerInfoAction> TAB_LIST_ACTIONS = EnumSet.of(
+        PlayerInfoAction.ADD_PLAYER,
+        PlayerInfoAction.UPDATE_LISTED,
+        PlayerInfoAction.UPDATE_LATENCY,
+        PlayerInfoAction.UPDATE_GAME_MODE,
+        PlayerInfoAction.UPDATE_DISPLAY_NAME
     );
 
     private final JavaPlugin plugin;
@@ -51,48 +33,37 @@ public class PacketManager {
         this.protocolManager = ProtocolLibrary.getProtocolManager();
     }
 
-    public void sendTabListAdd(GhostPlayer ghost, Player receiver) {
-        if (INFO_UPDATE_PACKET == null) {
-            plugin.getLogger().severe("PLAYER_INFO_UPDATE packet type unavailable. Check ProtocolLib version.");
-            return;
-        }
-        PacketContainer packet = protocolManager.createPacket(INFO_UPDATE_PACKET);
+    public void sendTabListAdd(Player target, GhostPlayer ghost) {
+        PacketContainer packet = protocolManager.createPacket(PacketType.Play.Server.PLAYER_INFO);
         packet.getPlayerInfoActions().write(0, TAB_LIST_ACTIONS);
 
-        WrappedGameProfile profile = new WrappedGameProfile(ghost.getUuid(), ghost.getName());
+        WrappedGameProfile profile = ghost.getProfile();
         applySkin(profile, ghost);
-
-        int latency = ThreadLocalRandom.current().nextInt(10, 101);
-        WrappedChatComponent displayName = WrappedChatComponent.fromText(ghost.getPrefix() + ghost.getName());
 
         PlayerInfoData infoData = new PlayerInfoData(
             ghost.getUuid(),
-            latency,
+            ghost.getPing(),
             true,
-            EnumWrappers.NativeGameMode.SURVIVAL,
+            NativeGameMode.SURVIVAL,
             profile,
-            displayName
+            WrappedChatComponent.fromText(ghost.getDisplayName())
         );
 
-        packet.getPlayerInfoDataLists().write(1, List.of(infoData));
+        packet.getPlayerInfoDataLists().write(1, Collections.singletonList(infoData));
 
         try {
-            protocolManager.sendServerPacket(receiver, packet);
+            protocolManager.sendServerPacket(target, packet);
         } catch (Exception e) {
             plugin.getLogger().severe("Failed to send tab list add packet: " + e.getMessage());
         }
     }
 
-    public void sendTabListRemove(GhostPlayer ghost, Player receiver) {
-        if (INFO_REMOVE_PACKET == null) {
-            plugin.getLogger().severe("PLAYER_INFO_REMOVE packet type unavailable. Check ProtocolLib version.");
-            return;
-        }
-        PacketContainer packet = protocolManager.createPacket(INFO_REMOVE_PACKET);
-        packet.getUUIDLists().write(0, List.of(ghost.getUuid()));
+    public void sendTabListRemove(Player target, GhostPlayer ghost) {
+        PacketContainer packet = protocolManager.createPacket(PacketType.Play.Server.PLAYER_INFO_REMOVE);
+        packet.getUUIDLists().write(0, Collections.singletonList(ghost.getUuid()));
 
         try {
-            protocolManager.sendServerPacket(receiver, packet);
+            protocolManager.sendServerPacket(target, packet);
         } catch (Exception e) {
             plugin.getLogger().severe("Failed to send tab list remove packet: " + e.getMessage());
         }
@@ -100,7 +71,7 @@ public class PacketManager {
 
     public void updateTabForAll(GhostPlayer ghost) {
         for (Player player : Bukkit.getOnlinePlayers()) {
-            sendTabListAdd(ghost, player);
+            sendTabListAdd(player, ghost);
         }
     }
 
